--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,19 @@
 language: node_js
+addons:
+  apt_packages:
+    - pandoc
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s
-  - export PATH="$HOME/.yarn/bin:$PATH"
+  - rm -rf node_modules/ 
 cache:
   directories:
     - ~/.npm
 notifications:
   email: false
-cache:
-  directories:
-    - node_modules
-  yarn: true
 node_js:
   - '8'
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
-  - make 
+  - make index.html
 deploy:
   provider: pages
   skip_cleanup: true
