--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ node_js:
   - '8'
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
-  - make index.html
+  - make html
 deploy:
   provider: pages
   skip_cleanup: true
