--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ node_js:
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
   - make html
+  - make pdf
 deploy:
   provider: pages
   skip_cleanup: true
