--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 addons:
   apt_packages:
     - pandoc
+    - python
 before_install:
   - rm -rf node_modules/ 
 cache:
@@ -13,8 +14,8 @@ node_js:
   - '8'
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
-  - make html
-  - make pdf
+  - ./build.py --html
+  - ./build.py --pdf
 deploy:
   provider: pages
   skip_cleanup: true
