--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "verisonable resume of cjoshmartin's skills",
   "main": "index.html",
   "dependencies": {
+    "express": "^4.17.1",
     "npm": "^6.3.0"
   },
   "devDependencies": {
-    "semantic-release": "^15.9.6",
+    "semantic-release": "^15.13.19",
     "travis-deploy-once": "^5.0.2"
   },
   "scripts": {
