--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "index.html",
   "dependencies": {
     "express": "^4.17.1",
-    "npm": "^6.3.0"
+    "npm": "^6.3.0",
+    "rethinkdb": "^2.3.3"
   },
   "devDependencies": {
     "semantic-release": "^15.13.19",
     "travis-deploy-once": "^5.0.2"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\"",
     "travis-deploy-once": "travis-deploy-once",
     "semantic-release": "semantic-release"
