--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "verisonable resume of cjoshmartin's skills",
   "main": "index.html",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "npm": "^6.3.0",
     "rethinkdb": "^2.3.3"
